--- a/templates/like_dislike_landing.html
+++ b/templates/like_dislike_landing.html
@@ -2,7 +2,8 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% trans "Privacy Policy" %}{% endblock %}
+
+{% block title %}{% trans "Like/Dislike" %}{% endblock %}
 
 {% block main %}
 
