create temporary user to link scores to

--- a/templates/like_dislike.html
+++ b/templates/like_dislike.html
@@ -50,9 +50,9 @@
                     <div class="card-body">
                         <h5 class="card-title mb-3">Do you like the way the horse is represented in this statue?</h5>
                         <p class="card-text">
-                            <button type="button" class="btn btn-success like_dislike " data-like="1" style="width:30%;">Yes</button>
+                            <button type="button" class="btn btn-success like_dislike " data-like="1" style="width:30%;">Like</button>
                             <button type="button" class="btn btn-info like_dislike" data-like="0" style="width:30%;">Don't Know</button>
-                            <button type="button" class="btn btn-danger like_dislike" data-like="-1" style="width:30%;">No</button>
+                            <button type="button" class="btn btn-danger like_dislike" data-like="-1" style="width:30%;">Dislike</button>
                         </p>
                         <p >Ref:<span id="ref"></span></p>
 
