better final screen - show results

--- a/templates/like_dislike_done.html
+++ b/templates/like_dislike_done.html
@@ -55,12 +55,14 @@
 
                 <div class="input-group mb-3 mt-4">
                     <input type="email" class="form-control" name="email" placeholder="Enter email" required>
-                    <button class="btn btn-success border-rad" type="submit" >Subscribe</button>
+
                 </div>
+
+                  <button class="btn btn-success " type="submit" >Send Feedback/Subscribe</button>
 
                <p class="col-md-8 fs-5"> Thank you, Phoebe Bright</p>
 
-                        <a href="/like_dislike/" class="btn btn-primary btn-lg px-4 gap-3">Show me more Statues!</a>
+
             </form>
 
 
