remove feedback being required

--- a/templates/like_dislike_done.html
+++ b/templates/like_dislike_done.html
@@ -44,7 +44,7 @@
 
 <h5>Optional Feedback</h5>
                 <label for="feedback" class="form-label">What characteristics determined whether you Liked or Disliked a statue?  Any other feedback you would like to share?</label>
-                <textarea cols="40" rows="6" class="form-control" name="feedback" required></textarea>
+                <textarea cols="40" rows="6" class="form-control" name="feedback"></textarea>
 
                 <p class="col-md-8 fs-5">Once there have enough "gut feel" scores, I will start sharing the most liked and disliked and asking more detailed questions - what do you think would be interesting?</p>
 
