Add Really Like and Really Dislike

--- a/templates/like_dislike.html
+++ b/templates/like_dislike.html
@@ -4,12 +4,12 @@
 
 {% block extra_head %}
     <style>
-  #progress-bar-container {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
+        #progress-bar-container {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
         #progress-bar {
             height: 20px;
             background-color: #76c7c0;
@@ -35,10 +35,10 @@
         <h3 id="name" class="text-center"></h3>
         <div class="col-md-6 offset-md-3">
             <div class="card">
-                  <!-- Loading Indicator -->
-                    <div id="loading-indicator" class="position-absolute top-50 start-50 translate-middle" style="display: none;">
-                        <i class="bi bi-arrow-clockwise" style="font-size: 2rem; color: #666;"></i>
-                    </div>
+                <!-- Loading Indicator -->
+                <div id="loading-indicator" class="position-absolute top-50 start-50 translate-middle" style="display: none;">
+                    <i class="bi bi-arrow-clockwise" style="font-size: 2rem; color: #666;"></i>
+                </div>
                 <div id="image-container" class="position-relative text-center" style="width: 100%; height: auto;">
                     <!-- Image -->
                     <img class="card-img-top" src="" alt="Card image cap" id="image" />
@@ -49,16 +49,19 @@
 
                     <div class="card-body">
                         <h5 class="card-title mb-3">Do you like the way the horse is represented in this statue?</h5>
-                        <p class="card-text">
-                            <button type="button" class="btn btn-success like_dislike " data-like="1" style="width:30%;">Like</button>
-                            <button type="button" class="btn btn-info like_dislike" data-like="0" style="width:30%;">Don't Know</button>
-                            <button type="button" class="btn btn-danger like_dislike" data-like="-1" style="width:30%;">Dislike</button>
-                        </p>
+           <p class="card-text d-flex justify-content-between">
+    <button type="button" class="btn btn-dark-green like_dislike flex-fill mx-2" data-like="2">Really Like</button>
+    <button type="button" class="btn btn-light-green like_dislike flex-fill mx-2" data-like="1">Like</button>
+    <button type="button" class="btn btn-neutral like_dislike flex-fill mx-2" data-like="0">Don't Know</button>
+    <button type="button" class="btn btn-light-red like_dislike flex-fill mx-2" data-like="-1">Dislike</button>
+    <button type="button" class="btn btn-dark-red like_dislike flex-fill mx-2" data-like="-2">Really Dislike</button>
+</p>
+
                         <p >Ref:<span id="ref"></span></p>
 
-                            <div id="progress-bar-container">
-                                <div id="progress-bar"></div>
-                            </div>
+                        <div id="progress-bar-container">
+                            <div id="progress-bar"></div>
+                        </div>
 
                     </div>
                 </div>
@@ -145,13 +148,13 @@
             });
         }
 
-function updateProgressBar(index) {
-    const progressPercentage = ((index + 1) / totalImages) * 100;
-    d3.select("#progress-bar")
-        .transition()
-        .duration(500)
-        .style("width", `${progressPercentage}%`);
-}
+        function updateProgressBar(index) {
+            const progressPercentage = ((index + 1) / totalImages) * 100;
+            d3.select("#progress-bar")
+                .transition()
+                .duration(500)
+                .style("width", `${progressPercentage}%`);
+        }
 
         function update_statue(pk, payload) {
             var csrftoken = getCookie('csrftoken');
