better done screen

--- a/templates/like_dislike_done.html
+++ b/templates/like_dislike_done.html
@@ -24,7 +24,7 @@
 
 
                     <div class="form-check mt-3 ">
-                        <input class="form-check-input" type="checkbox" value="" id="is_horsey">
+                        <input class="form-check-input" type="checkbox" value="Y" name="horsey" id="horsey">
                         <label class="form-check-label" for="is_horsey">
                             Check if you consider yourself a horse person
                         </label>
@@ -33,7 +33,7 @@
                     <p class="col-md-8 fs-5 mt-3" >If you would like to be updated and maybe help with the next phase, please leave your email below.  It won't be shared with anyone and will be deleted at the end of the project.  If you have any questions or ideas do email me at phoebe@horsetech.ie. </p>
 
                     <div class="input-group mb-3 mt-4">
-                        <input type="email" class="form-control" name="email" placeholder="Enter email" required>
+                        <input type="email" class="form-control" name="email" placeholder="Enter email" >
 
                     </div>
 
